[package]
name = "labrat-ut"
version = "0.1.0"
authors = ["Vypo Mouse <vypo@fursuits.by>"]
edition = "2018"
build = "src/build.rs"
license = "AGPL-3.0-or-later"

[dependencies]
url = "2.2.1"
labrat = { git = "https://github.com/Vypo/labrat" }
tokio = { version = "1.2", features = ["io-util", "fs"] }
tokio-stream = "0.1.3"
qmetaobject = "0.1.4"
cstr = "0.1.0"
cpp = "0.5.6"
snafu = "0.6.10"
reqwest = { version = "0.11.1", default-features = false, features = ["stream"] }
chrono = "0.4.19"

[build-dependencies]
cpp_build = "0.5"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
